<resources>
    <string name="app_name">TestMeli</string>
    <string name="search_product">Buscar Producto</string>
    <string name="title">title</string>
    <string name="subtitle">subtitle</string>
    <string name="string1">string1</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="work">work</string>
    <string name="buy_now">Comprar Ahora!</string>
    <string name="state">Localidad</string>
    <string name="city">Barrio</string>
    <string name="quantity">Disponibles</string>
    <string name="price">Precio</string>
    <string name="condition">Estado</string>
    <string name="congratulations">Felicidades por la compra!!</string>
    <string name="please_wait">Cargando...</string>
    <string name="no_internet_connection">No tienes conexion a internet.</string>
    <string name="seems_like_you">Parece que no tienes conexion</string>
    <string name="try_again">Prueba de nuevo</string>
    <string name="android_version">Android Version</string>
    <string name="android_name">Android Name</string>
    <string name="_500">$500</string>
    <string name="comprar">Comprar</string>
</resources>