<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageDetail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top"
                android:src="@drawable/ic_launcher_background">
            </ImageView>

            <TextView
                android:id="@+id/title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string1"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="30sp">
            </TextView>
        </LinearLayout>
        <TextView
            android:id="@+id/line"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_margin="@dimen/margin"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />
        <LinearLayout
            style="@style/LinearLayout">
            <TextView
                style="@style/TextViewTitle"
                android:text="@string/state">
            </TextView>

            <TextView
                style="@style/TextViewTitle"
                android:text="@string/city">
            </TextView>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayout">

            <TextView
                android:id="@+id/state"
                style="@style/TextViewSubtitle">
            </TextView>

            <TextView
                android:id="@+id/city"
                style="@style/TextViewSubtitle">
            </TextView>

        </LinearLayout>
        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_margin="@dimen/margin"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            style="@style/LinearLayout"
            android:weightSum="3">
            <TextView
                style="@style/TextViewTitle"
                android:text="@string/quantity">
            </TextView>

            <TextView
                style="@style/TextViewTitle"
                android:text="@string/price">
            </TextView>
            <TextView
                style="@style/TextViewTitle"
                android:text="@string/condition">
            </TextView>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayout"
            android:weightSum="3">

            <TextView
                android:id="@+id/quantity"
                style="@style/TextViewSubtitle">
            </TextView>

            <TextView
                android:id="@+id/price"
                style="@style/TextViewSubtitle">
            </TextView>

            <TextView
                android:id="@+id/condition"
                style="@style/TextViewSubtitle">
            </TextView>

        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_margin="@dimen/margin"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/buy_btn"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/buy_now">

        </Button>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>