<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/image_no_connection"
        android:src="@drawable/antenna_white"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/no_internet" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
        android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/no_internet"
        android:text="@string/no_internet_connection"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/image_no_connection"/>

    <TextView
        android:id="@+id/seems_like"
        android:text="@string/seems_like_you"
        android:textSize="16sp"
        android:minLines="2"
        android:textColor="@android:color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp" android:layout_marginEnd="40dp" android:textAlignment="center"
        app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/no_internet"
        />

    <Button
        android:id="@+id/try_again"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/try_again"
        style="@style/button_style"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="80dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/seems_like" app:layout_constraintVertical_bias="0.228"
        />

</androidx.constraintlayout.widget.ConstraintLayout>